--- a/Forum_score.ipynb
+++ b/Forum_score.ipynb
@@ -10,10 +10,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 306,
    "id": "af8fbea2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['echter Fensterkontakt', 259, 'https://community.tado.com/de/discussion/458/echter-fensterkontakt']\n",
+      "['Benutzerabhängiger Away-Modus', 220, 'https://community.tado.com/de/discussion/1736/benutzerabhaengiger-away-modus']\n",
+      "['Sommerbetrieb', 206, 'https://community.tado.com/de/discussion/724/sommerbetrieb']\n",
+      "['Schichtbetrieb - Ich möchte gerne mehr als nur einen Zeitplan hinterlegen.', 162, 'https://community.tado.com/de/discussion/282/schichtbetrieb-ich-moechte-gerne-mehr-als-nur-einen-zeitplan-hinterlegen']\n",
+      "['Signalverstärker/Repeater - Funkreichweite erhöhen Thermostate/ Bridge', 123, 'https://community.tado.com/de/discussion/1413/signalverstaerker-repeater-funkreichweite-erhoehen-thermostate-bridge']\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas\n",
@@ -51,7 +63,7 @@
     "    single_score.append(data['score'])\n",
     "    score.append([data['name'],data['score'],data[r'url']])\n",
     "    \n",
-    "\n",
+    "#    Output file\n",
     "from csv import writer\n",
     "with open(r'C:\\Users\\adnan\\Downloads\\Top_12.csv', 'w', newline='') as f_obj:\n",
     "          \n",
@@ -62,22 +74,6 @@
     "\n",
     "    f_obj.close()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b91cfc43",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f05ce1a2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
